# cml_wd_telcosense

./: .gitignore  01_train_cnn_1cml.ipynb  02_semestral_copy.ipynb  02_train_full_dataset.ipynb  LICENSE  README.md  classify_rsd.py  classify_workflow.py  cnn_utility.py  environment.yml  load_preprocess.py  metrics_utility.py  model_comparison_pipeline.py  parameter_tuning_loop.py  plot_utility.py  preprocess_all.py  preprocess_utility.py  pyproject.toml  requirements.txt  telcorain_workflow.py  train.py  waa_workflow.py  workflow.py  workflow_old.py
attempt_01_dummy_data/: cnn copy.py  group_dataset_samples.ipynb  my_cnn.py  my_train_cnn.ipynb  my_train_cnn_1cml.ipynb  original_train_cnn.ipynb
attempt_01_dummy_data/example_data/: dummy_data.nc
data_preprocessing/: inspect_and_preprocess.ipynb
modul/: cnn.py
modul/trained_cnn_param/: 2024_12_02_semestral_thesis
notebooks/: 02_train_full_dataset.ipynb  inspect_and_preprocess.ipynb
src/cml_wd_telcosense/: __init__.py
statistic_analysis/: statistics.py
telcosense_classification/: cnn_utility.py  cnn_utility_old.py  data_loading_utility.py  metrics_utility.py  plot_utility.py  preprocess_utility.py  preprocess_utility_old.py  waa_utility.py
telcosense_classification/module/: cnn_telcorain_v10.py  cnn_telcorain_v11.py  (+5 more)
use_metadata/: cnn_utility.py  model_comparison_pipeline_metadata.py  parameter_tuning_loop_metadata.py  preprocess_all_metadata.py  workflow_metadata.py
workflow_examples/: inference_workflow.py  model_comparison_pipeline.py  preprocess_all_workflow.py  train_workflow.py  waa_workflow.py
(+24 files in other folders)
