[project]
name = "cml-wd-telcosense"
version = "0.1.0"
authors = [
    { name = "Lukáš Kaleta", email = "xkalet07@vutbr.cz" }
]
description = ["Python package for CNN driven rain detection, using signal loss data from Commercial Microwave Links. 
    Includes utility for: CNN model inference, CML data preprocessing, results evaluation, CNN model training"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "numpy>=1.26,<3.0",
    "scipy>=1.12,<2.0",
    "scikit-learn>=1.4,<2.0",
    "torch>=2.3,<3.0",
    "pandas",
    "matplotlib",
    "xarray",
    "netCDF4",
    "tqdm",
    "pycomlink"
]

license-files = ["LICENSE*"]

[project.urls]
Homepage = "https://github.com/xkalet07/cml_wd_telcosense"
Issues = "https://github.com/xkalet07/cml_wd_telcosense/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"


